--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@react-navigation/material-bottom-tabs": "^5.1.6",
     "@react-navigation/native": "^5.0.6",
     "@react-navigation/stack": "^5.0.6",
+    "axios": "^0.20.0",
+    "native-base": "^2.13.14",
     "react": "16.9.0",
     "react-native": "^0.63.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-awesome-alerts": "^1.4.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.6.0",
