--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/datetimepicker": "^3.0.2",
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/netinfo": "^5.9.6",
     "@react-native-community/picker": "^1.7.1",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-navigation/drawer": "^5.1.1",
