--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.9.0",
     "react-native": "^0.63.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-awesome-alerts": "^1.4.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-linear-gradient": "^2.5.6",
@@ -32,6 +33,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.8",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^6.6.0"
