--- a/package.json
+++ b/package.json
@@ -3,40 +3,41 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "cd android && gradlew clean && cd .. && react-native run-android",
+    "android": "cd android && rm -rf app/build && gradlew --stop && gradlew clean && gradlew cleanBuildCache && cd ../ && react-native run-android",
+    "android2": "cd android && gradlew clean && cd ../ && react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.9.0",
-    "@react-native-community/datetimepicker": "^3.0.2",
-    "@react-native-community/masked-view": "^0.1.6",
-    "@react-native-community/netinfo": "^5.9.6",
-    "@react-native-community/picker": "^1.7.1",
-    "@react-native-community/toolbar-android": "0.1.0-rc.2",
-    "@react-navigation/drawer": "^5.1.1",
-    "@react-navigation/material-bottom-tabs": "^5.1.6",
-    "@react-navigation/native": "^5.0.6",
-    "@react-navigation/stack": "^5.0.6",
-    "axios": "^0.20.0",
-    "native-base": "^2.13.14",
-    "react": "16.9.0",
-    "react-native": "^0.63.2",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^3.4.6",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.10",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-native-community/toolbar-android": "^0.1.0-rc.2",
+    "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/material-bottom-tabs": "^5.3.15",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
+    "axios": "^0.21.1",
+    "native-base": "^2.15.2",
+    "react": "^16.9.0",
+    "react-native": "^0.64.0",
     "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^4.0.4",
-    "react-native-awesome-alerts": "^1.4.0",
-    "react-native-gesture-handler": "^1.6.0",
+    "react-native-awesome-alerts": "^1.4.2",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-paper": "^3.6.0",
-    "react-native-reanimated": "^1.7.0",
+    "react-native-paper": "^3.12.0",
+    "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.0.0-beta.8",
-    "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^12.1.0",
+    "react-native-screens": "^2.18.1",
+    "react-native-snap-carousel": "^1.3.1",
+    "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
