--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -178,6 +178,10 @@ android {
 
         }
     }
+   lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+   }
 }
 
 dependencies {
