--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-awesome-alerts": "^1.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-base64": "^0.1.4",
     "react-native-image-picker": "^3.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.12.0",
