--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "accordion-collapse-react-native": "^1.0.1",
     "axios": "^0.21.1",
     "native-base": "^2.15.2",
     "react": "^16.14.0",
