--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.18.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^6.7.0",
