--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "^0.64.2",
     "react-native-animatable": "^1.3.3",
     "react-native-awesome-alerts": "^1.5.1",
+    "react-native-dots-pagination": "^0.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-base64": "^0.1.4",
     "react-native-image-picker": "^3.8.1",
