--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "^5.9.10",
+    "@react-native-community/netinfo": "^6.0.0",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-community/toolbar-android": "^0.1.0-rc.2",
     "@react-navigation/drawer": "^5.12.5",
@@ -24,6 +24,7 @@
     "accordion-collapse-react-native": "^1.0.1",
     "axios": "^0.21.1",
     "native-base": "^2.15.2",
+    "pusher-js": "^7.0.3",
     "react": "^16.14.0",
     "react-native": "^0.64.2",
     "react-native-animatable": "^1.3.3",
