--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-image-picker": "^3.8.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.12.0",
+    "react-native-push-notification": "^8.0.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.18.1",
